# dl-poly

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  INSTALL  LICENCE  LICENCE.rst  LICENSE  README.cmake  README.md  README.txt  README.windows  README_KIM.txt  Release.md  building.md  building.rst  coding_style.md  coding_style.rst  contributing.md  contributing.rst  gitlab-ci.yml  make-hash-test  modulefile.cmake  test_hash.f90  test_new_control
bench/: README.txt
cmake/: CodeCoverage.cmake  DLPOLYBuildFunctions.cmake  DLPOLYBuildOptions.cmake  Doxyfile.cmake  all.xml.cmake  debug.cmake  dlpoly.md.cmake  flags.cmake  modulefile.cmake  win32helper.cmake  win64helper.cmake
data/: README.txt
documentation/: conda.yml  requirements.txt
easybuild/: PLUMED-2.7.3-intel-2021b.eb  README.md  dl_poly-4.09-foss-2018b.eb  dl_poly-4.09-foss-2019a.eb  dl_poly-4.09-intel-2018b.eb  dl_poly-4.09-intel-2019a.eb  dl_poly-4.10.0-foss-2020a.eb  dl_poly-4.10.0-intel-2020a.eb  dl_poly-5.0.0-foss-2020b.eb  dl_poly-5.0.0-intel-2020b.eb  dl_poly-5.1.0-foss-2021b.eb  dl_poly-5.1.0-intel-2021b.eb  kim-api-2.2.1-intel-compilers-2021.4.0.eb
execute/: README.txt  cleanup  copy  gopoly  gui  select  store
java/: AML.java  About_DL_POLY  Acknowledge  BML.java  Basic.java  BondLengths.java  Builder.java  CERAMICS  CellBoundary.java  ChgDefaults.java  ColorScheme.java  ComVar.java  Config.java  ConfigCompare.java  DataArchiver.java  Disclaimer  Editor.java  Element.java  EopVar.java  Execute.java  GUI.java  GdfCalc.java  GraphDraw.java  GslCalc.java  GuiFileFilter.java  HoldConfig  HovePlot.java  HyperDyn.java  InsertMolecule.java  Licence  MINIDREI  MINIOPLS  MakeBlankField.java  MakeBucky.java  MakeCeramField.java  MakeChain.java  MakeControl.java  MakeDreiField.java  MakeLattice.java  MakeOPLSField.java  (+32 more)
manual/: EXAMPLE_CONTROL  JavaGUI.odt  MANUAL_USR.tex  about_dlpoly.tex  acknowledgements.tex  angle.eps  bond.eps  boundary_conditions.tex  calcite.eps  cascades.eps  ccmake.eps  cmake-gui.eps  coarse_graining.tex  code_structure.tex  compilation.tex  construction.tex  correlations.tex  cube.eps  diagnostic.tex  dihedral.eps  disclaimer.tex  dl_poly.bib  dl_poly.bst  dlpio.tex  dlpoly_files.eps  dpd.tex  error_messages.tex  evb.tex  ewald_precision.tex  examples.tex  finitediff.eps  force_fields.tex  heat_flux.tex  input_files.tex  introduction.tex  (+23 more)
source/: CMakeLists.txt  Makefile  README.txt  README_KIM.txt  adf.F90  analysis.F90  angles.F90  angles_compute.F90  angles_compute.f90  angles_forces.F90  angles_forces.f90  angles_module.F90  angles_module.f90  angles_table_read.F90  angles_table_read.f90  angular_distribution.F90  asserts.F90  bonds.F90  bonds_compute.F90  bonds_compute.f90  bonds_forces.F90  bonds_forces.f90  bonds_module.F90  bonds_module.f90  bonds_table_read.F90  bonds_table_read.f90  bounds.F90  bspline.F90  build_book.F90  build_book_intra.F90  build_book_intra.f90  build_chrm.F90  build_chrm_intra.F90  build_chrm_intra.f90  build_excl.F90  build_excl_intra.F90  build_excl_intra.f90  build_tplg.F90  build_tplg_intra.F90  build_tplg_intra.f90  (+635 more)
source/CELLS/: cell_list_module.F90  cell_vdw_forces.h  cell_vdw_forces_new.F90  two_body_cell_forces.F90
source/CUDA/: Makefile_CUDA  README_CUDA.txt  constraints_shake_cu.cu  constraints_shake_lfv_cuda.f90  constraints_shake_vv_cuda.f90  dl_poly_common_cu.cu  dl_poly_cu.h  dl_poly_cuda.f90  dl_poly_init_cu.cu  dl_poly_module_cuda.f90  dl_poly_wrappers_cuda.f90  ewald_real_forces_cuda.f90  ewald_spme_forces_cu.cu  ewald_spme_forces_cuda.f90  link_cell_pairs_cu.cu  link_cell_pairs_cuda.f90  metal_forces_cuda.f90  metal_ld_compute_cu.cu  metal_ld_compute_cuda.f90  numeric_container_cuda.f90  spme_container_cu.cu  spme_container_cuda.f90  spme_forces_cu.cu  time_cuda.cc  two_body_forces_cu.cu  two_body_forces_cuda.f90  update_shared_units_cuda.f90  vdw_forces_cuda.f90
source/LFV/: CMakeLists.txt  constraints_shake_lfv.f90  md_lfv.f90  npt_b0_lfv.f90  npt_b1_lfv.f90  npt_h0_lfv.f90  npt_h1_lfv.f90  npt_l0_lfv.f90  npt_l1_lfv.f90  npt_m0_lfv.f90  npt_m1_lfv.f90  nst_b0_lfv.f90  nst_b1_lfv.f90  nst_h0_lfv.f90  nst_h1_lfv.f90  nst_l0_lfv.f90  nst_l1_lfv.f90  nst_m0_lfv.f90  nst_m1_lfv.f90  nve_0_lfv.f90  nve_1_lfv.f90  nvt_a0_lfv.f90  nvt_a1_lfv.f90  nvt_b0_lfv.f90  nvt_b1_lfv.f90  nvt_e0_lfv.f90  nvt_e1_lfv.f90  nvt_g0_lfv.f90  nvt_g1_lfv.f90  nvt_h0_lfv.f90  nvt_h1_lfv.f90  nvt_l0_lfv.f90  nvt_l1_lfv.f90  nvt_l2_lfv.f90  pmf_shake_lfv.f90  pseudo_lfv.f90  w_at_start_lfv.f90  w_integrate_lfv.f90  w_md_lfv.f90
source/SERIAL/: ewald_spme_dfie~d.F90  ewald_spme_dfie~d.f90  ewald_spme_forc~s.F90  ewald_spme_forc~s.f90  ewald_spme_mfie~d.F90  ewald_spme_mfie~d.f90  ewald_spme_mfie~d_d.F90  ewald_spme_mfie~d_d.f90  ewald_spme_mforc~s.F90  ewald_spme_mforc~s.f90  mpi_api.F90  mpi_module.F90  mpi_module.f90  mpif.h
source/VV/: CMakeLists.txt  constraints_rattle.F90  constraints_rattle.f90  constraints_shake_vv.F90  constraints_shake_vv.f90  md_vv.f90  npt_b0_vv.F90  npt_b0_vv.f90  npt_b1_vv.F90  npt_b1_vv.f90  npt_h0_scl.F90  npt_h0_scl.f90  npt_h0_vv.F90  npt_h0_vv.f90  npt_h1_scl.F90  npt_h1_scl.f90  npt_h1_vv.F90  npt_h1_vv.f90  npt_l0_vv.F90  npt_l0_vv.f90  npt_l1_vv.F90  npt_l1_vv.f90  npt_m0_vv.F90  npt_m0_vv.f90  npt_m1_vv.F90  npt_m1_vv.f90  nst_b0_vv.F90  nst_b0_vv.f90  nst_b1_vv.F90  nst_b1_vv.f90  nst_h0_scl.F90  nst_h0_scl.f90  nst_h0_vv.F90  nst_h0_vv.f90  nst_h1_scl.F90  nst_h1_scl.f90  nst_h1_vv.F90  nst_h1_vv.f90  nst_l0_vv.F90  nst_l0_vv.f90  (+55 more)
source/tildapre/: coul_cp_dfield.F90  coul_dddp_mfield.F90  coul_fscp_mfield.F90  coul_rfp_mfield.F90  ewald_frzn_mfield.F90  ewald_spme_dfiel~.F90  ewald_spme_force~.F90  ewald_spme_mfield.F90  ewald_spme_mfiel~.F90  ewald_spme_mfiel~_d.F90  ewald_spme_mforce~.F90  link_cell~pairs.F90  link~cell_pairs.F90  netcdf_module_pre.F90  netcdf_modul~.F90  plumed_module_pre.F90  plumed_modul~.F90
source/unit_tests/: test_configuration.F90  test_control.F90  test_control.f90  test_integrators.F90  test_new_control  test_units.F90  test_units.f90  test_vdw.F90  unit_test.F90
(+343 files in other folders)
