set(dlpoly_LFV_SRCS
constraints_shake_lfv.f90
npt_b0_lfv.f90
npt_b1_lfv.f90
npt_h0_lfv.f90
npt_h1_lfv.f90
npt_l0_lfv.f90
npt_l1_lfv.f90
npt_m0_lfv.f90
npt_m1_lfv.f90
nst_b0_lfv.f90
nst_b1_lfv.f90
nst_h0_lfv.f90
nst_h1_lfv.f90
nst_l0_lfv.f90
nst_l1_lfv.f90
nst_m0_lfv.f90
nst_m1_lfv.f90
nve_0_lfv.f90
nve_1_lfv.f90
nvt_a0_lfv.f90
nvt_a1_lfv.f90
nvt_b0_lfv.f90
nvt_b1_lfv.f90
nvt_e0_lfv.f90
nvt_e1_lfv.f90
nvt_g0_lfv.f90
nvt_g1_lfv.f90
nvt_h0_lfv.f90
nvt_h1_lfv.f90
nvt_l0_lfv.f90
nvt_l1_lfv.f90
pmf_shake_lfv.f90
pseudo_lfv.f90
)

add_library(dlpolylfv ${dlpoly_LFV_SRCS})
target_link_libraries(dlpolylfv dlpolycore dlpolythermo)
INSTALL_SUBLIB(dlpolylfv)
