set(dlpoly_VV_SRCS
constraints_rattle.f90
constraints_shake_vv.f90
npt_b0_vv.f90
npt_b1_vv.f90
npt_h0_scl.f90
npt_h0_vv.f90
npt_h1_scl.f90
npt_h1_vv.f90
npt_l0_vv.f90
npt_l1_vv.f90
npt_m0_vv.f90
npt_m1_vv.f90
nst_b0_vv.f90
nst_b1_vv.f90
nst_h0_scl.f90
nst_h0_vv.f90
nst_h1_scl.f90
nst_h1_vv.f90
nst_l0_vv.f90
nst_l1_vv.f90
nst_m0_vv.f90
nst_m1_vv.f90
nve_0_vv.f90
nve_1_vv.f90
nvt_a0_vv.f90
nvt_a1_vv.f90
nvt_b0_vv.f90
nvt_b1_vv.f90
nvt_e0_vv.f90
nvt_e1_vv.f90
nvt_g0_scl.f90
nvt_g0_vv.f90
nvt_g1_scl.f90
nvt_g1_vv.f90
nvt_h0_scl.f90
nvt_h0_vv.f90
nvt_h1_scl.f90
nvt_h1_vv.f90
nvt_l0_vv.f90
nvt_l1_vv.f90
nvt_l2_vv.f90
pmf_rattle.f90
pmf_shake_vv.f90
pseudo_vv.f90
)
add_library(dlpolyvv ${dlpoly_VV_SRCS})
target_link_libraries(dlpolyvv dlpolycore dlpolythermo)
INSTALL_SUBLIB(dlpolyvv)
