set(dlpoly_VV_SRCS
constraints_rattle.F90
constraints_shake_vv.F90
npt_b0_vv.F90
npt_b1_vv.F90
npt_h0_scl.F90
npt_h0_vv.F90
npt_h1_scl.F90
npt_h1_vv.F90
npt_l0_vv.F90
npt_l1_vv.F90
npt_m0_vv.F90
npt_m1_vv.F90
nst_b0_vv.F90
nst_b1_vv.F90
nst_h0_scl.F90
nst_h0_vv.F90
nst_h1_scl.F90
nst_h1_vv.F90
nst_l0_vv.F90
nst_l1_vv.F90
nst_m0_vv.F90
nst_m1_vv.F90
nvt_b0_vv.F90
nvt_b1_vv.F90
nvt_e0_vv.F90
nvt_e1_vv.F90
nvt_g0_scl.F90
nvt_g0_vv.F90
nvt_g1_scl.F90
nvt_g1_vv.F90
nvt_h0_scl.F90
nvt_h0_vv.F90
nvt_h1_scl.F90
nvt_h1_vv.F90
nvt_l0_vv.F90
nvt_l1_vv.F90
nvt_l2_vv.F90
pmf_rattle.F90
pmf_shake_vv.F90
pseudo_vv.F90
)
add_library(dlpolyvv ${dlpoly_VV_SRCS})
target_link_libraries(dlpolyvv dlpolycore dlpolythermo)
INSTALL_SUBLIB(dlpolyvv)
